[tool.poetry]
name = "grid3_client_py"
version = "0.1.0"
description = ""
packages = [{ include = "jumpscale" }]
authors = ["Rana Tarek <rana.t.hassan@gmailcom>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
js-ng = { git = "https://github.com/threefoldtech/js-ng.git", branch = "development" }
substrate-interface = "^0.13.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
